sea-query-derive/tests/compile-fail/unsupported_container.rs
use sea_query::Iden;

#[derive(Iden)]
struct User {
    id: usize,
}

fn main() {}
